# jonk-dotfiles

./: .gitignore  README.md  config.yaml  init.sh
borders/dot-config/borders/: bordersrc
dotfiles/: wezterm.lua  zshrc
dotfiles/config/: starship.toml
dotfiles/config/fish/: config.fish  fish_variables
dotfiles/config/macchina/: macchina.toml
dotfiles/config/nushell/: config.nu  env.nu  history.txt  packages.nuon  plugin.nu
dotfiles/config/nvim/: .neoconf.json  lazy-lock.json  lazyvim.json
dotfiles/config/pypoetry/: auth.toml  config.toml  pyproject.toml
dotfiles/config/pypoetry/pypoetry/: config.toml  pyproject.toml
dotfiles/zsh-complete/: _pulumi
gh/dot-config/gh/: hosts.yml
lazygit/dot-config/lazygit/: config.yml
lazygit/lazygit/: config.yml
macos-shell/: dot-wezterm.lua  dot-zshrc
macos-shell/dot-config/: starship.toml
macos-shell/dot-config/lazygit/: config.yml
macos-shell/dot-config/macchina/: macchina.toml
macos-shell/dot-config/sketchybar/: colors.lua  default.lua  events.lua
macos-shell/dot-config/yabai/: yabairc
macos-shell/dot-zsh-complete/: _pulumi
neovim/dot-config/nvim/: stylua.toml
nvim/nvim/: lazy-lock.json
shell/: dot-wezterm.lua  dot-zshrc  dot_wezterm.lua  dot_zshrc
shell/dot_zsh-complete/: _pulumi
sketchybar/sketchybar/: LICENSE  README.md  bar.lua  colors.lua  default.lua  events.lua  executable_items.sh  executable_variables.sh  helpers  icons.lua  init.lua  items  settings.lua  sketchybarrc
starship/dot-config/: starship.toml
wezterm/: .wezterm.lua
yabai/yabai/: yabairc
(+90 files in other folders)
