[tool.poetry]
name = "poetry-instance"
version = "1.5.1"
description = ""
authors = []
license = ""

[tool.poetry.dependencies]
python = "3.9.17"
poetry = "^1.5.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"



[tool.poetry.group.additional.dependencies]
pyright = "^1.1.314"
ruff = "^0.0.272"
black = "^23.3.0"
poetry-monorepo-dependency-plugin = "^1.0.5"




