[tool.poetry]
name = "poetry-instance"
version = "1.5.1"
description = ""
authors = []
license = ""

[tool.poetry.dependencies]
python = "3.11.4"
poetry = "1.5.1"

[tool.poetry.group.additional.dependencies]
poetry-multiproject-plugin = "^1.3.1"
poetry-polylith-plugin = "^1.8.1"
poetry-bumpversion = "^0.3.1"

